docs/api/qiskit/0.19/qiskit.transpiler.passes.RemoveResetInZeroState.mdx
---
title: RemoveResetInZeroState (v0.19)
description: API reference for qiskit.transpiler.passes.RemoveResetInZeroState in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.RemoveResetInZeroState
---

# RemoveResetInZeroState

<Class id="qiskit.transpiler.passes.RemoveResetInZeroState" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/optimization/remove_reset_in_zero_state.py" signature="RemoveResetInZeroState(*args, **kwargs)" modifiers="class">
  Remove reset gate when the qubit is in zero state.

  ## Attributes

  <span id="removeresetinzerostate-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveResetInZeroState.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="removeresetinzerostate-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.RemoveResetInZeroState.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="removeresetinzerostate-name" />

  ### name

  <Function id="qiskit.transpiler.passes.RemoveResetInZeroState.name" signature="RemoveResetInZeroState.name()">
    Return the name of the pass.
  </Function>

  <span id="removeresetinzerostate-run" />

  ### run

  <Function id="qiskit.transpiler.passes.RemoveResetInZeroState.run" signature="RemoveResetInZeroState.run(dag)">
    Run the RemoveResetInZeroState pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

